--- a/package.json
+++ b/package.json
@@ -19,18 +19,25 @@
     "@angular/http": "2.2.3",
     "@angular/platform-browser": "2.2.3",
     "@angular/platform-browser-dynamic": "2.2.3",
-    "@angular/router": "3.2.3",
     "@angular/platform-server": "2.2.3",
+    "@angular/router": "3.2.3",
+    "angular2-express-engine": "2.1.0-rc.1",
     "angular2-platform-node": "2.1.0-rc.1",
     "angular2-universal": "2.1.0-rc.1",
     "angular2-universal-polyfills": "2.1.0-rc.1",
-    "angular2-express-engine": "2.1.0-rc.1",
+    "body-parser": "^1.17.1",
     "compression": "1.6.2",
-    "express": "^4.14.0",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
+    "dotenv": "^4.0.0",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.3.0",
+    "lodash": "^4.17.4",
+    "mysql": "^2.13.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.21"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.3",
